# talkis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.ru.md  index.html  package.json  testing_plan.md  tsconfig.json
.agent/workflows/: update-prompts.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: audio-pipeline-principles.md  local-stt-runtime.md
docs/release/: review-template.md  review-v0.1.10.md  review-v0.1.11.md  review-v0.1.12.md  review-v0.1.13.md  review-v0.1.14.md  review-v0.1.15.md  review-v0.1.16.md  review-v0.1.17.md  review-v0.1.18.md  review-v0.1.19.md  review-v0.1.2.md  review-v0.1.20.md  review-v0.1.21.md  review-v0.1.22.md  review-v0.1.23.md  review-v0.1.24.md  review-v0.1.3.md  review-v0.1.4.md  review-v0.1.6.md  review-v0.1.7.md  review-v0.1.8.md  review-v0.1.9.md  rule.md
scripts/: before-tauri-build.mjs  build-release-macos.sh  build-release.mjs  check-version-sync.sh  create-updater-latest-json.sh  postprocess-macos-release.sh  prepare-ffmpeg-sidecar.mjs  prepare-stt-sidecar.mjs
site/: index.html  style-rule.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json
src-tauri/binaries/: talkis-diarize-aarch64-apple-darwin  talkis-stt-nvidia-aarch64-apple-darwin  talkis-stt-qwen-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  call_capture.rs  hotkey_capture.rs  lib.rs  local_stt.rs  logger.rs  main.rs  media.rs  media_permissions.rs  native_voice_recorder.rs  paste.rs  prompt_config.rs
src-tauri/src/commands/: accessibility.rs  mod.rs  runtime_info.rs  settings_window.rs  widget.rs
src-tauri/src/runtime_engines/: nvidia_engine.py  qwen_engine.py
src/components/: PermissionScreen.tsx  TitleBar.tsx  UserPanel.tsx  Waveform.tsx
src/config/: languages.ts
src/config/transcription-prompts/: manifest.json
src/lib/: callCapture.ts  cloudAuth.ts  cloudTextProcessing.ts  fileTranscription.ts  hotkeyEvents.ts  hotkeyValidation.test.ts  logger.ts  permissions.ts  store.ts  theme.ts  transcriptionPrompts.ts  updater.ts  utils.ts  widgetScale.ts
src/windows/settings/: SettingsApp.tsx
src/windows/widget/: Widget.tsx  WidgetNoticeOverlay.tsx  widgetConstants.ts  widgetPositioning.ts
talkis-stt-nvidia/: manifest.json
talkis-stt-qwen/: manifest.json
(+19 files in other folders)
