[package]
name = "talk-flow"
version = "0.1.0"
description = "Talk Flow - Voice to Text macOS Widget"
authors = ["trixter"]
edition = "2021"

[lib]
name = "talk_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = "0.7.1"
dirs = "5"
include_dir = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow"] }
